--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,21 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource1.url=jdbc:h2:mem:DB1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource1.driverClassName=org.h2.Driver
+spring.datasource1.username=sa
+spring.datasource1.password=
+
+spring.datasource2.url=jdbc:h2:mem:DB2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource2.driverClassName=org.h2.Driver
+spring.datasource2.username=sa
+spring.datasource2.password=
+
+
+
+
 
