--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=
+spring.application.name=procesadorBatch
 spring.batch.job.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
