--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.app</groupId>
     <artifactId>procesamiento_datos</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>war</packaging>
     <name>PROCESAMIENTO_DATOS</name>
     <description>PROCESAMIENTO_DATOS</description>
